# invert

./: .gitignore  LICENSE  MANIFEST.in  README.md  build_and_upload.md  changelog.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
dev/: RAP-LSTM.ipynb  RAP-NN-pos.ipynb  RAP-NN.ipynb  RAP-NN_offdiag.ipynb  RAP-NN_offdiag.py  RAP-NN_offdiag_pt.py  adaptive_ap.ipynb  alternating_projectors.ipynb  ann_music.ipynb  beamformers.ipynb  evaluate.ipynb  evaluate_EEG_FWD.ipynb  flap_dev.ipynb  funny_optimization.ipynb  gallery.ipynb  gbf.ipynb  gpt.ipynb  greedy_patch_search.ipynb  improve_regularisation.ipynb  ista.ipynb  lstm_alter_u.ipynb  lstm_pre_selection.ipynb  lstm_pre_selection_nomask.ipynb  lstm_pre_selection_u-modifier.ipynb  lucas.ipynb  main copy.ipynb  main.ipynb  main_functional.ipynb  mass_solution_average.ipynb  mne_obj.ipynb  music.ipynb  new_algo.ipynb  new_ann.ipynb  new_ann_cov.ipynb  new_ann_temporal.ipynb  new_bayes.ipynb  old_ann_gens.ipynb  ortho_matching_pursuit.ipynb  requirements.txt  sbl.ipynb  (+9 more)
dev/old/: dmd.ipynb  (+26 more)
doc/: .buildinfo  Makefile  conf.py  genindex.html  index.rst  objects.inv  search.html  searchindex.js
docs/: .buildinfo  genindex.html  help.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
invert/: __init__.py  config.py  context_lstm.py  focuss.py  invert.py  loreta.py  minimum_norm_estimates.py  multiple_sparse_priors.py  wrop.py
invertmeeg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
misc/: problems.txt
notes/: architecture.md  features.md
tests/: test_simulate.py  test_solvers.py
(+217 files in other folders)
