[metadata]
name = invertmeeg
version = 0.1.0
author = Lukas Hecker
description = A high-level M/EEG Python library for EEG inverse solutions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LukeTheHecker/inverse
license = CC BY-NC 4.0
classifiers =
    Programming Language :: Python :: 3
    License :: Other/Proprietary License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    tensorflow
    mne
    scipy
    colorednoise
    matplotlib
    pyvista
    pyvistaqt
    PyQt5
    tqdm
    pytest
    scikit-learn
    pandas
    POT
